# manas

./: .gitignore  .gitmodules  README.md  setup-research.cfg  setup.cfg
cai_manas/models/: utils.py
cai_manas/part_of_speech/: cli.py  pos_fine_tuning.py  pos_tagger.py
cai_manas/part_of_speech/cli.config/model/: intersyllabic-olive-cormorant.yaml
cai_manas/part_of_speech/pos_fine_tuning.config/: config.yaml
cai_manas/part_of_speech/pos_fine_tuning.config/data/: default.yaml  part-of-speech-intrasyllabic-olive.yaml  part-of-speech-olive.yaml
cai_manas/part_of_speech/pos_fine_tuning.config/model/: albert-olive-cormorant.yaml
cai_manas/part_of_speech/pos_fine_tuning.config/training/: frequent_logs.yaml
cai_manas/tokenizer/: __init__.py  cai_tokenizer_mixin.py  tokenizer.py
notebooks/: PoS evaluation.ipynb  SOAS PoS preprocess.ipynb  SOAS non-tsheg dataset.ipynb  Token embeddings exploration.ipynb  Word-level tokenization.ipynb
pretraining/albert/: TIBERT_PRETRAIN.md  build_pretraining_data.sh  build_pretraining_data_no_sop.sh  presplit_chars.txt  tibert_pretrain.yml  train_spm_model.sh
pretraining/albert/data/: .gitignore  kangyur-tengyur-bert-like-marker-docs.dvc
src/cai_manas/part_of_speech/: pos_tagger.py
