[metadata]
name = compassionai-manas
version = 0.1.0
author = CompassionAI
author_email = contact@compassion-ai.org
description = CompassionAI Project Manas - a bidirectional Tibetan transformer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/compassionai/manas
project_urls =
    Bug Tracker = https://github.com/compassionai/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = cai_manas
python_requires = >=3.6
install_requires =
    torch==1.12.*
    transformers==4.22.*
    sentencepiece==0.1.96
    scikit-learn==1.1.*
    hydra-core==1.2.*
    protobuf==3.20.*